# PROPOSAL

./: .clang-format  .cproject  .gitattributes  .gitignore  .gitmodules  .mailmap  .project  .travis.yml  .zenodo.json  0001-bug-add-missing-string-header-caused-windows-build-t.patch  AUTHORS  CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  FindROOT.cmake  INSTALL.md  INSTALL.txt  LICENSE.md  LICENSE.txt  Lizenz.txt  MANIFEST.in  README  README.md  RELEASE_NOTES.txt  conanfile.py  conanfile.txt  config_docu.md  install_log4cplus.sh  pyproject.toml  setup.cfg  setup.py  tags
doc/: CMakeLists.txt  Doxyfile.in  Makefile  Makefile.am
doc/source/: GettingStarted.rst  Installation.rst  conf.py  index.rst  pyBindings.rst
doc/source/TiKz/: Makefile  sector.tex
doc/source/_templates/: sub_module.rst
doc/source/gettingStarted/: GettingStarted.rst
doc/source/pyBindings/: component.rst  crosssection.rst  decay.rst  geometry.rst  math.rst  medium.rst  parametrization.rst  particle.rst  pyBindings.rst  pyPROPOSAL.rst  scattering.rst
doc/source/scripts/: matplotlibrc  plot_continuious.py
resources/root_examples/: CMakeLists.txt  FindROOT.cmake  plot_range.cxx
root_examples/: CMakeLists.txt  Total_dEdx.cxx  draw_track.cxx  plot_Bremsstrahlung_dEdx.cxx  plot_Bremsstrahlung_dNdx.cxx  plot_Bremsstrahlung_dNdx_different_ecut.cxx  plot_EnergyLossProbability.cxx  plot_Epairproduction_dEdx.cxx  plot_Epairproduction_dNdx.cxx  plot_Epairproduction_dNdx_different_ecut.cxx  plot_Ionization_dEdx.cxx  plot_Ionization_dNdx.cxx  plot_Ionization_dNdx_different_ecut.cxx  plot_MultMuon.cxx  plot_Photonuclear_dEdx.cxx  plot_Photonuclear_dNdx.cxx  plot_Scattering.cxx  plot_StandardNormal.cxx  plot_StochasticLosses.cxx  plot_range.cxx  plot_rel_brems_dEdx.cxx
src/: Amanda.cxx  BremsContinuous.cxx  BremsContinuous.h  BremsStochastic.cxx  BremsStochastic.h  Bremsstrahlung.cxx  CMakeLists.txt  CrossSections.cxx  DFunctionOfx.cxx  DFunctionOfx.h  Decay.cxx  Decay.h  Energy2Loss.cxx  Energy2LossE.cxx  Energy2LossX.cxx  EpairContinuous.cxx  EpairStochastic.cxx  EpairStochastic.h  Epairproduction.cxx  FindRoot.cxx  FunctionInt.h  FunctionInt2.cxx  FunctionInt2.h  FunctionOfx.cxx  Integral.cxx  Integral.h  Interpolate.cxx  Interpolate.h  IonizContinuous.cxx  IonizStochastic.cxx  IonizStochastic.h  Ionizationloss.cxx  MMCexception.cxx  MathModel.cxx  Medium.cxx  MpairContinuous.cxx  MpairContinuous.h  MpairStochastic.cxx  MpairStochastic.h  Mpairproduction.cxx  (+20 more)
src/PROPOSAL/: CMakeCache.txt  CMakeLists.txt  Config.cmake.in  Constants.cxx  DefaultFactory.cxx  EnergyCutSettings.cxx  Logging.cxx  Propagator.cxx  Secondaries.cxx  methods.cxx
src/PROPOSAL/PROPOSAL/: CMakeLists.txt  Constants.h  EnergyCutSettings.h  Logging.h  PROPOSAL.h  Propagator.h  RegisteredInDefault.h  Secondaries.h  methods.h  version.h.in
src/PROPOSAL/PROPOSAL/crosssection/: CrossSection.h  CrossSectionBuilder.h  CrossSectionDirect.h  CrossSectionInterpolant.h  CrossSectionMultiplier.h  CrossSectionVector.h  (+1 more)
src/PROPOSAL/crosssection/: CrossSection.cxx  CrossSectionBuilder.cxx  CrossSectionIntegral.cxx  CrossSectionInterpolantBase.cxx
src/PROPOSAL/decay/: DecayChannel.cxx  DecayTable.cxx  LeptonicDecayChannel.cxx  ManyBodyPhaseSpace.cxx  StableChannel.cxx  TwoBodyPhaseSpace.cxx
src/PROPOSAL/density_distr/: density_distr.cxx  density_exponential.cxx  density_homogeneous.cxx  density_polynomial.cxx  density_splines.cxx
src/PROPOSAL/detail/: CMakeLists.txt
src/PROPOSAL/geometry/: Box.cxx  Cylinder.cxx  Geometry.cxx  GeometryFactory.cxx  Sphere.cxx
src/PROPOSAL/math/: Cartesian3D.cxx  Function.cxx  Integral.cxx  Interpolant.cxx  InterpolantBuilder.cxx  MathMethods.cxx  Spherical3D.cxx  Spline.cxx  Vector3D.cxx
src/PROPOSAL/medium/: Components.cxx  Medium.cxx  MediumFactory.cxx
src/PROPOSAL/particle/: Particle.cxx  ParticleDef.cxx
src/PROPOSAL/propagation_utility/: ContRand.cxx  ContRandBuilder.cxx  Decay.cxx  DecayBuilder.cxx  Displacment.cxx  DisplacmentBuilder.cxx  Interaction.cxx  InteractionBuilder.cxx  PropagationUtility.cxx  PropagationUtilityIntegral.cxx  PropagationUtilityInterpolant.cxx  Time.cxx  TimeBuilder.cxx
src/PROPOSAL/scattering/: Coefficients.cxx  Scattering.cxx  ScatteringHighland.cxx  ScatteringMoliere.cxx
src/PROPOSAL/secondaries/: DefaultFactory.cxx  SecondariesCalculator.cxx
src/pyPROPOSAL/: CMakeLists.txt  MANIFEST.in  particle.cxx  pybindings.cxx  pyproject.toml  scattering.cxx  secondaries.cxx
src/pyPROPOSAL/detail/: components.cxx  crosssection.cxx  decay.cxx  density_distribution.cxx  geometry.cxx  math.cxx  medium.cxx  parametrization.cxx  particle.cxx  pybindings.cxx  scattering.cxx  secondaries.cxx
tests/: Annihilation_TEST.cxx  Annihilation_Test.cxx  Bremsstrahlung_TEST.cxx  CMakeLists.txt  Compton_TEST.cxx  ContinuousRandomization_TEST.cxx  CrossSection_TEST.cxx  DecayChannel_TEST.cxx  DecayTable_TEST.cxx  Decay_TEST.cxx  Density_distribution_TEST.cxx  Displacement_TEST.cxx  EnergyCutSettings_TEST.cxx  Epairproduction_TEST.cxx  Geometry_TEST.cxx  Integral_TEST.cxx  Interaction_TEST.cxx  Interpolant_TEST.cxx  Ionization_TEST.cxx  MathMethods_TEST.cxx  Medium_TEST.cxx  Mupairproduction_TEST.cxx  ParticleDef_TEST.cxx  Particle_TEST.cxx  PhotoMuPair_TEST.cxx  PhotoPair_TEST.cxx  Photoeffect_TEST.cxx  Photonuclear_TEST.cxx  ProcessCollection_TEST.cxx  Propagation_TEST.cxx  Propagator_TEST.cxx  RootFinder_TEST.cxx  Scattering_TEST.cxx  Secondaries_TEST.cxx  SecondaryProduction_TEST.cxx  Sector_TEST.cxx  Spline_TEST.cxx  StandardNormal_Test.cxx  TestFiles2.tar.Z  Time_TEST.cxx  (+6 more)
tests/PROPOSALTestUtilities/: CMakeLists.txt  TestFilesHandling.h
tests/gen_testfiles_scripts/: __init__.py  annihilation.py  bremsstrahlung.py  compton.py  continous_randomization.py  decay.py  epairproduction.py  ionization.py  mupairproduction.py  photomupair.py  photonuclear.py  photopair.py  propagation.py  scattering.py  sector.py  weak.py
tests/gen_testfiles_scripts/TestFiles/: Sector_Energy_Distance.txt  Sector_Propagate.txt
tests/python/: deflection_test.py  test_continuous_loss_output.py
(+1283 files in other folders)
