[metadata]
name = proposal
url = https://github.com/tudo-astroparticlephysics/PROPOSAL
author = PROPOSAL Development Team
author_email = jean-marco.alameddine@tu-dortmund.de
classifiers=
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Physics
    Development Status :: 5 - Production/Stable

license = LGPLv3
description = Monte Carlo simulation library to propagate leptons and gamma rays
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = unix
