find_package(Doxygen)
if(DOXYGEN_FOUND)

SET( DOXYGEN_SOURCE_DIR
${CMAKE_CURRENT_SOURCE_DIR}/../

)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile )
add_custom_target(doc
${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
COMMENT "Generating PROPOSAL documentation with Doxygen" VERBATIM
)
endif(DOXYGEN_FOUND)


