set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/root_examples)

add_executable(Plot_range plot_range.cxx)
add_executable(Plot_Scattering plot_Scattering.cxx)
add_executable(Plot_Ionization_dEdx plot_Ionization_dEdx.cxx)
add_executable(Plot_Ionization_dNdx plot_Ionization_dNdx.cxx)
add_executable(Plot_Ionization_dNdx_different_ecut plot_Ionization_dNdx_different_ecut.cxx)
add_executable(Plot_Epairproduction_dEdx plot_Epairproduction_dEdx.cxx)
add_executable(Plot_Epairproduction_dNdx plot_Epairproduction_dNdx.cxx)
add_executable(Plot_Epairproduction_dNdx_different_ecut plot_Epairproduction_dNdx_different_ecut.cxx)
add_executable(Plot_Bremsstrahlung_dEdx plot_Bremsstrahlung_dEdx.cxx)
add_executable(Plot_Bremsstrahlung_dNdx plot_Bremsstrahlung_dNdx.cxx)
add_executable(Plot_Bremsstrahlung_dNdx_different_ecut plot_Bremsstrahlung_dNdx_different_ecut.cxx)
add_executable(Plot_Photonuclear_dEdx plot_Photonuclear_dEdx.cxx)
add_executable(Plot_Photonuclear_dNdx plot_Photonuclear_dNdx.cxx)
add_executable(Plot_rel_Bremsstrahlung_dEdx plot_rel_brems_dEdx.cxx)
add_executable(Total_dEdx Total_dEdx.cxx)
add_executable(Plot_StandardNormal plot_StandardNormal.cxx)
add_executable(Draw_Track draw_track.cxx)


target_link_libraries(Plot_range ${ROOT_LIBRARIES})
target_link_libraries(Plot_range PROPOSAL)

target_link_libraries(Plot_Scattering ${ROOT_LIBRARIES})
target_link_libraries(Plot_Scattering PROPOSAL)

target_link_libraries(Plot_Ionization_dEdx ${ROOT_LIBRARIES})
target_link_libraries(Plot_Ionization_dEdx PROPOSAL)

target_link_libraries(Plot_Ionization_dNdx ${ROOT_LIBRARIES})
target_link_libraries(Plot_Ionization_dNdx PROPOSAL)

target_link_libraries(Plot_Ionization_dNdx_different_ecut ${ROOT_LIBRARIES})
target_link_libraries(Plot_Ionization_dNdx_different_ecut PROPOSAL)

target_link_libraries(Plot_Epairproduction_dEdx ${ROOT_LIBRARIES})
target_link_libraries(Plot_Epairproduction_dEdx PROPOSAL)

target_link_libraries(Plot_Epairproduction_dNdx ${ROOT_LIBRARIES})
target_link_libraries(Plot_Epairproduction_dNdx PROPOSAL)

target_link_libraries(Plot_Epairproduction_dNdx_different_ecut ${ROOT_LIBRARIES})
target_link_libraries(Plot_Epairproduction_dNdx_different_ecut PROPOSAL)

target_link_libraries(Plot_Bremsstrahlung_dEdx ${ROOT_LIBRARIES})
target_link_libraries(Plot_Bremsstrahlung_dEdx PROPOSAL)

target_link_libraries(Plot_rel_Bremsstrahlung_dEdx ${ROOT_LIBRARIES})
target_link_libraries(Plot_rel_Bremsstrahlung_dEdx PROPOSAL)

target_link_libraries(Plot_Bremsstrahlung_dNdx ${ROOT_LIBRARIES})
target_link_libraries(Plot_Bremsstrahlung_dNdx PROPOSAL)

target_link_libraries(Plot_Bremsstrahlung_dNdx_different_ecut ${ROOT_LIBRARIES})
target_link_libraries(Plot_Bremsstrahlung_dNdx_different_ecut PROPOSAL)

target_link_libraries(Plot_Photonuclear_dEdx ${ROOT_LIBRARIES})
target_link_libraries(Plot_Photonuclear_dEdx PROPOSAL)

target_link_libraries(Plot_Photonuclear_dNdx ${ROOT_LIBRARIES})
target_link_libraries(Plot_Photonuclear_dNdx PROPOSAL)

target_link_libraries(Draw_Track ${ROOT_LIBRARIES})
target_link_libraries(Draw_Track PROPOSAL)

target_link_libraries(Total_dEdx ${ROOT_LIBRARIES})
target_link_libraries(Total_dEdx PROPOSAL)

target_link_libraries(Plot_StandardNormal ${ROOT_LIBRARIES})
target_link_libraries(Plot_StandardNormal PROPOSAL)
